# GameEngine

./: .cirrus.yml  Cargo.toml  README
.github/: dependabot.yml
assets/material/: Dassault_Mirage_V.mtl
shaders/: composition.fs  composition.vs  lighting.fs  lighting.vs  pre_pass_program.fs  pre_pass_program.vs
src/: audio.rs  console.rs  logic.rs  main.rs  model.rs  render.rs  tool.rs
src/input/: input_source.rs  mod.rs
src/logic/: mod.rs
