[package]
name = "rust_engine"
version = "0.1.1"
authors = ["Andrew Jianzhong Liu <liujzh@shanghaitech.edu.cn>", "Momo Yimo Chen <chenym@shanghaitech.edu.cn>", "Zean Zhou <zhouza@shanghaitech.edu.cn>"]

[dependencies]
glium = "*"
cgmath = "*"
image = "*"
baal = "0.5.1"
tobj = "0.1.4"
glium_text = "0.11.0"
triple_buffer = "0.3.3"
